@@ -1,14 +1,40 @@
 Welcome to chess.el, a client and library for playing Chess from
 Emacs.
 
-chess.el does not know how to play chess against you.  While the
-library does know all legal moves, there is no "thinking" module.  For
-this, you must download one of the publically available chess engines,
-such as gnuchess, crafty or phalanx.  You will find all of these
-sufficiently challenging, I'm sure.  Once they are installed, chess.el
-will use them, provided the locations of the binaries is on your PATH.
+chess.el is an Emacs Lisp library and several clients on top of the underlying
+library functionality for performing various activities related
+to the game of chess.
+You can play against an external chess program such as gnuchess,
+crafty, phalanx or sjeng.  All of them are publically available,
+and chess.el will automatically detect which one
+you have installed, provided they have standard executable
+program names, and are in a located in a directory which
+is part of the PATH.  See the customisable variable 
+`chess-default-engine'.
 
-John Wiegley <johnw@gnu.org>
+You can also play against another human or computer over the internet
+(through a direct Emacs-to-Emacs connection, or
+on one of the Internet Chess Servers like freechess.org or
+chessclub.com), or even against a very simple chess thinking
+module implemented in pure Emacs Lisp.
+
+chess.el also provides a mode for editing Portable Game Notation (PGN
+files.
+
+To improve your chessaility, you might also like to have
+a look at chess-puzzle, which allows you to solve
+chess puzzle collections (in PGN or EPD format) against
+one of the engines you have installed.
+
+HISTORY
+
+chess.el started out as a single file project with
+version 1.0 by John Wiegley <johnw@gnu.org>.  Version 2.0 is a major
+rewrite and reorganisation of the original code, also done
+by John Wiegley.  In the end of 2003, John did not
+have a lot of time to finish all the various aspects of version 2.0,
+and maintainership was given to Mario Lang <mlang@delysid.org>.
+
 
 LAYOUT
 
